resolved errors on scrollreveal, adding visibility hidden y setTimeout

--- a/styles/style.css
+++ b/styles/style.css
@@ -17,9 +17,11 @@ html, body {
     overflow-x: hidden!important;
 }
 #header{
+    visibility: hidden;
     background-repeat: no-repeat;
     width: 100%;
     height: 100vh;
+    
     
 }
 .header{
@@ -57,6 +59,7 @@ html, body {
 }
 
 .logo{
+    visibility: hidden;
     height: 90px;
     padding: 15px 10%;
     font-size: 22px;
@@ -64,7 +67,9 @@ html, body {
     margin-top: 10px;
     
 }
-
+.menu{
+    visibility: hidden;
+}
 nav .menu li{
     margin: 10px;
     display: inline-block;
@@ -94,9 +99,10 @@ nav .menu li a{
     color: #00fff5;
 }
 .header-text{
+    visibility: hidden;
     margin-top: 20%;
     font-size: 30px;
-
+    
 }
 .header-text h1 {
     font-size: 60px;
@@ -122,7 +128,9 @@ span{
     flex-wrap: wrap;
 }
 .about-col-1{
+    visibility: hidden;
     flex-basis: 35%;
+    
 }
 .about-col-1 img{
     height: 350px;
@@ -132,9 +140,11 @@ span{
     
 }
 .about-col-2{
+    visibility: hidden;
     flex-basis: 60%;
 }
 .sub-title{
+    visibility: hidden;
     font-size: 60px;
     font-weight: 600;
     color: #fff;
@@ -183,9 +193,12 @@ span{
     margin-top: 10px;
 }
 .sub-title.sub2{
+    visibility: hidden;
     text-align: center;
+    
 }
 .list-icons{
+    visibility: hidden;
     display: grid;
     margin-top: 0px;
     padding: 100px ;
@@ -234,6 +247,7 @@ span{
     transform: translateY(-12px)
 }
 .p2{
+    visibility: hidden;
     margin-top: -50px;
     margin-bottom: 100px;
     font-size: 24px;
@@ -249,10 +263,14 @@ span{
     padding: 70px 0;
 }
 .services-list{
+    visibility: hidden;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
+}
+.sub-title.sub3{
+    visibility: hidden;
 }
 .services-list div{
     background: #262626;
@@ -292,6 +310,7 @@ span{
     padding: 70px 0;
 }
 .work-list{
+    visibility: hidden;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 40px;
@@ -349,6 +368,7 @@ span{
     height: 100%;
 }
 .btn{
+    visibility: hidden;
     display: block;
     margin: 50px auto;
     width: fit-content;
@@ -358,6 +378,9 @@ span{
     text-decoration: none;
     color: #fff;
     transition: background 0.5s;
+}
+.btn.a{
+    visibility: hidden;
 }
 .btn:hover{
     background: #00fff5;
@@ -369,9 +392,11 @@ span{
     padding: 70px 0
 }
 .contact-left{
+    visibility: hidden;
     flex-basis: 35%;
 }
 .contact-right{
+    visibility: hidden;
     flex-basis: 60%;
 }
 .contact-left p{
@@ -398,6 +423,7 @@ span{
     transform: translateY(-5px);
 }
 .btn.btn2{
+    visibility: hidden;
     display: inline-block;
     background: #00fff5;
     color: black;
